# diablo4-tool

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-research-spike/: 01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  SPIKE-FINDINGS.md
.planning/phases/02-scaffold-safety-game-capture/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-SUMMARY.md  02-CONTEXT.md
.planning/phases/03-web-parser/: 03-01-SUMMARY.md  03-03-SUMMARY.md
.planning/phases/04-auto-applier/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-CONTEXT.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-gui-integration/: 05-02-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/auto_applier/: coords.rs  error.rs  executor.rs  humanize.rs  mod.rs
src-tauri/src/game_capture/: dpi.rs  error.rs  mod.rs  screenshot.rs  window.rs
src-tauri/src/safety/: detector.rs  error.rs  hotkey.rs  mod.rs
src-tauri/src/web_parser/: client.rs  error.rs  extract.rs  mod.rs  parse.rs
src-tauri/tests/: web_parser_test.rs
src-tauri/tests/fixtures/: 1QMw.json  1qHh.json  deleted.json
(+33 files in other folders)
